--- a/page1.html
+++ b/page1.html
@@ -10,37 +10,22 @@
 
 <body>
 	<svg id='Month' width='1200px' height='60px'>
+		<line x1="10" y1="15" x2="1000" y2="15" stroke="gray" stroke-width="2"  />
 	</svg>
 	<div id="part1">
 	<div class="summary">
-        <table id="summary" width="100%">
-            <thead>
-            <tr id='Horizontal' bgcolor='#adad85'>
-                <th> V/H </th>
-                <th> QA </th>
-				<th> SAP </th>
-				<th> HCM </th>
-				<th> Analytics </th>
-				<th> Cloud </th>
-				<th> Total </th>
-            </tr>
-            <tr id="BFS" > <th bgcolor='#adad85'> BFS </th> </tr>
-			<tr id="Healthcare"> <th bgcolor='#adad85'> Healthcare </th> </tr>
-			<tr id="Technology"> <th bgcolor='#adad85'> Technology </th> </tr>
-			<tr id="Manlog"> <th bgcolor='#adad85'> Manlog </th> </tr>
-			<tr id="Retail"> <th bgcolor='#adad85'> Retail </th> </tr>
-			<tr id="Others"> <th bgcolor='#adad85'> Others </th> </tr>
-			<tr id="Total"> <th bgcolor='#adad85'> Total </th> </tr>
-            </thead>
-        </table>
+        <svg id='snapshot' width='500px' height='300px'>
+			<g id='vertbars'> </g>
+			<g id='horzbars'> </g>
+		</svg>
     </div>
 	
 	<div class="walk">
-		<table id="snapshot" width="90%">
+		<table id="snapshot" width='300px' height='300px'>
         <tr id='Header'>
 		   <th bgcolor='#adad85'> </th>
-           <th bgcolor='#adad85'> Prev </th>
-           <th bgcolor='#adad85'> Curr </th>
+           <th bgcolor='#adad85' id='#Prev'> Jan </th>
+           <th bgcolor='#adad85' id='#Curr'> Feb </th>
 		   <th bgcolor='#adad85'> MoM </th>
 		   <th bgcolor='#adad85'> MoM% </th>
 		</tr>
@@ -55,36 +40,29 @@
 		</table>
     </div>
 	<div class="walk" >
-        <h3> Revenue Trend </h3>
-        <svg id="RTrend">
-			<g id="Actuals"></g>
-            <g id="Budgets"></g>
-			<g id="yAxis"></g>
-			<g id="xAxis"></g>
-        </svg>
-	</div>
-	</div>
-	
-	<div id="walks">
-		<svg id="RevWalk" width="200px" height="250px">
+        <svg id="RevWalk" width="300px" height="300px">
 			<text transform='translate(0,20)' class='label2'> REVENUE WALK </text>
 			<text id='RWDisplay' transform='translate(0,35)' class='label2'>  </text>
 			<g id="RevWalkLabel"> </g>
 			<g id="RevWalkId"> </g>
 		</svg>
+	</div>
+	</div>
+	
+	<div id="walks">
 		<svg width='25px' height='250px'/>
-		<svg id="MarginWalk" width="200px" height="250px">
+		<svg id="MarginWalk" width="300px" height="300px">
 			<text transform='translate(0,20)' class='label2'> MARGIN WALK </text>
 			<text id='MWDisplay' transform='translate(0,35)' class='label2'>  </text>
 			<g id="MarginWalkLabel"> </g>
 			<g id="MarginWalkId"> </g>
 		</svg>
 		<svg width='25px' height='250px'/>
-		<svg id="PplWalk" width="200px" height="250px">
+		<svg id="PplWalk" width="300px" height="300px">
 			<g id='onsite'>
 			<text transform='translate(0,20)' class='label2'> ASSOCIATE MOVEMENT </text>
 			<text transform='translate(0,35)' class='label2'> Onsite </text>
-			<text transform='translate(0,127)' class='label2'> Offshore </text>
+			<text transform='translate(0,129)' class='label2'> Offshore </text>
 			</g>
 		
 			<g id='PplWalkId'> </g>
@@ -94,6 +72,7 @@
 		</svg>
 	</div>
 	
+	<div id='Clientlist'> </div>
 <script type="application/javascript" src="page1script.js"></script>
 <script type="application/javascript" src="updateRevWalk.js"></script>
 <script type="application/javascript" src="updateSnapshot.js"></script>
