--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <title> Corporate Dashboard </title>
-	<link rel="stylesheet" href="styles.css"/>
-	<link rel="stylesheet" href="styles2.css"/>
+	<link rel="stylesheet" href="Code/styles.css"/>
+	<link rel="stylesheet" href="Code/styles2.css"/>
 
     <script src="https://d3js.org/d3.v4.js"></script>
-	<script type="text/javascript" src="bower_components/d3-tip/index.js"></script>
+	<script type="text/javascript" src="Code/bower_components/d3-tip/index.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.9.0/d3-legend.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
@@ -145,22 +145,22 @@
 
 </div>
 <div id="processbook" class="tabcontent">
-	<embed src="data/Process_Book.pdf" width="1500" height="1500" type='application/pdf'>
+	<embed src="Code/data/Process_Book.pdf" width="1500" height="1500" type='application/pdf'>
 </div>
 
 <div id="screencast" class="tabcontent">
 </div>
 
 
-<script type="application/javascript" src="js/page1script.js"></script>
-<script type="application/javascript" src="js/updateRevWalk.js"></script>
+<script type="application/javascript" src="Code/js/page1script.js"></script>
+<script type="application/javascript" src="Code/js/updateRevWalk.js"></script>
 <!--<script type="application/javascript" src="js/updateSnapshot.js"></script>-->
-<script type="application/javascript" src="js/updateMarginWalk.js"></script>
-<script type="application/javascript" src="js/updatePPMWalk.js"></script>
-<script type="application/javascript" src="js/scatter.js"></script>
-<script type="application/javascript" src="js/table.js"></script>
-<script type="application/javascript" src="js/nestrecords.js"></script>
-<script type="application/javascript" src="js/tabs.js"></script>
+<script type="application/javascript" src="Code/js/updateMarginWalk.js"></script>
+<script type="application/javascript" src="Code/js/updatePPMWalk.js"></script>
+<script type="application/javascript" src="Code/js/scatter.js"></script>
+<script type="application/javascript" src="Code/js/table.js"></script>
+<script type="application/javascript" src="Code/js/nestrecords.js"></script>
+<script type="application/javascript" src="Code/js/tabs.js"></script>
 
 
 </body>
