Adding the screencast video

--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@
 </div>
 
 <div id="screencast" class="tabcontent">
+	<iframe width="900" height="900"
+			src="https://youtu.be/MShgkq-jO38">
+	</iframe>
 </div>
 
 
